--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -7,8 +7,8 @@ build:
     python: "3.12"
   jobs:
     post_install:
-      - pip install mkdocs mkdocs-material mkdocs-mermaid2-plugin pymdown-extensions
-
+      - pip install -r docs/readthedoc_requirements.txt
+  
 mkdocs:
   configuration: mkdocs.yml
 
