--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,6 +5,8 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.12"
+  apt_packages:
+    - doxygen    
   jobs:
     post_install:
       - pip install -r docs/readthedoc_requirements.txt
