--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,7 @@ repo_name: JeonghunLee/wifisniffer
 
 
 nav:
-  - Home: index.md
+  - Home: index_mkdocs.md
   - Hardware Setup: board.md
   - Console Commands: command.md
   - Capture Pipeline:
