--- a/.github/workflows/esp-idf.yml
+++ b/.github/workflows/esp-idf.yml
@@ -1,4 +1,4 @@
-name: "ESP-IDF CI (Docker v5.4)"
+name: "ESP-IDF Build and Release CI/CD (Docker v5.4)"
 
 on:
   push:
@@ -54,34 +54,14 @@ jobs:
           name: esp-idf-build
           path: build/
 
-  release:
-    name: Create GitHub Release (on tag)
-    needs: build
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
-
-    steps:
-      - name: Download build artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: esp-idf-build
-
       - name: Create GitHub Release and upload build
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref_name }}
-          name: ${{ github.ref_name }}
-          # Explicitly include the bootloader, partition table, app bin, elf(s) and flash args
           files: |
             build/bootloader/bootloader.bin
             build/partition_table/partition-table.bin
             build/esp32s3_sniffer.bin
             build/*.elf
-            build/flash_project_args
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            build/flash_project_args          
 
-      - name: List release files (for debug)
-        run: |
-          echo "Files included in release:"
-          ls -l build || true
+
